--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "format": "prettier --write 'src/**/*.+(js|ts|jsx|tsx|vue|astro)'",
+    "format": "prettier --write 'src/**/*.+(js|ts|jsx|tsx|vue|astro|scss)'",
     "prepare": "husky"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "sass": "^1.77.8"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
