--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.4.0",
+    "ahooks": "^3.8.0",
+    "antd": "^5.19.3",
+    "axios": "^1.7.2",
     "classnames": "^2.5.1",
+    "mockjs": "^1.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
@@ -21,6 +26,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
+    "@types/mockjs": "^1.0.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
